Hito 2: six more rules, JSON output, and a project-wide index
TX002 flags a @Transactional method called from inside its own class, which
bypasses the proxy and runs uncommitted. TX003 flags @Transactional with no
rollbackFor where a checked exception can escape, which Spring commits rather
than rolls back. RES002 covers the streams from Files.lines/list/walk/find, whose
handles RES001 structurally cannot see because a Stream is not a resource type.
BEAN001 flags a persistence entity that component scanning also picks up,
BEAN002 a prototype bean held by a singleton, BEAN003 field injection.

BEAN002 is the one rule that cannot be written against a single file: the type
of a field is prototype scoped is a fact about another file. Rather than
special-case it, a rule can declare requiresProjectIndex() and the engine builds
a shallow index of every declared type, but only when an enabled rule asks,
because building it means parsing every file a second time. A test asserts
exactly one rule currently opts in, so the cost cannot quietly spread.

Simple names are not proof of identity, and the index is keyed by them, so
BEAN002 reports only when every type answering to a name is prototype scoped.

AopProxyability now owns the "can Spring proxy this" question that AOP001 had
inline, and AopAnnotations owns the annotation list, so the transactional rules
share one answer instead of three.

--format json and --output produce the contract Hito 6 and Hito 7 will read.
Keys are always present, severities are enum names, and JSON is never truncated
by --max-findings, because a client reading a partial array cannot tell an empty
result from a cut-off one.

Also fixed, all caught by tests: Optional.ofNullable around a getParentNode that
already returns Optional, so class-level @Transactional was never seen; nested
JSON objects written as quoted strings, which is valid JSON every parser accepts
and every consumer misreads; and a whitelist of checked exceptions that claimed
two class