@@ -1,14 +1,13 @@
 package io.github.brewlint.core.rules.aop;
 
-import com.github.javaparser.ast.Modifier;
 import com.github.javaparser.ast.body.MethodDeclaration;
 import io.github.brewlint.core.model.Severity;
 import io.github.brewlint.core.rule.AopAnnotations;
+import io.github.brewlint.core.rule.AopProxyability;
 import io.github.brewlint.core.rule.Rule;
 import io.github.brewlint.core.rule.RuleCollector;
 import io.github.brewlint.core.rule.RuleContext;
 
-import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -24,6 +23,10 @@ import java.util.List;
  *
  * <p>Confidence: high. This is decided by the Java language itself, not by heuristics, so the rule
  * has no false-positive risk on the construct it matches.
+ *
+ * <p>The list of annotations it understands, and the "can Spring proxy this" test, both live in
+ * {@link AopAnnotations} and {@link AopProxyability} so the transactional rules in Hito 2 share one
+ * answer instead of three.
  */
 public final class AopAnnotationOnNonProxyableMethodRule implements Rule {
 
@@ -45,39 +48,18 @@ public final class AopAnnotationOnNonProxyableMethodRule implements Rule {
     @Override
     public void analyze(RuleContext context, RuleCollector out) {
         for (MethodDeclaration method : context.compilationUnit().findAll(MethodDeclaration.class)) {
-            List<String> blockers = nonProxyableModifiers(method);
+            List<String> blockers = AopProxyability.blockers(method);
             if (blockers.isEmpty()) {
                 continue;
             }
-            method.getAnnotations().stream()
-                    .filter(annotation -> AopAnnotations.isProxyDependent(
-                            annotation.getName().getIdentifier()))
-                    .forEach(annotation -> {
-                        String annotationName = annotation.getName().getIdentifier();
-                        out.report(
-                                method,
-                                "@" + annotationName + " on a " + String.join(" ", blockers)
-                                        + " method: Spring's proxy cannot intercept it, so "
-                                        + AopAnnotations.purposeOf(annotationName) + ".",
-                                "Make the method public and call it from another bean. If it must stay "
-                                        + blockers.get(0) + ", move the annotated method into its own "
-                                        + "Spring bean and delegate to it from the caller.");
-                    });
+            for (String annotationName : AopProxyability.proxyDependentAnnotations(method)) {
+                out.report(
+                        method,
+                        "@" + annotationName + " on a " + AopProxyability.describe(blockers)
+                                + " method: Spring's proxy cannot intercept it, so "
+                                + AopAnnotations.purposeOf(annotationName) + ".",
+                        AopProxyability.suggestionFor(blockers.getFirst()));
+            }
         }
-    }
-
-    /** Returns the modifiers that prevent proxying, most specific first. */
-    private List<String> nonProxyableModifiers(MethodDeclaration method) {
-        List<String> blockers = new ArrayList<>(3);
-        if (method.hasModifier(Modifier.Keyword.PRIVATE)) {
-            blockers.add("private");
-        }
-        if (method.hasModifier(Modifier.Keyword.STATIC)) {
-            blockers.add("static");
-        }
-        if (method.hasModifier(Modifier.Keyword.FINAL)) {
-            blockers.add("final");
-        }
-        return blockers;
     }
 }
